# splitsmith-v0.1

./: CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
paper/: paper.bib  paper.md
splitsmith/: __init__.py  __main__.py  _meta.py  _version.py  audit.py  compat.py  cv.py  export.py  report.py  split.py  types.py
tests/: test_audit.py  test_audit_cv.py  test_audit_unhashable.py  test_cli.py  test_cv_basic.py  test_cv_gap.py  test_cv_group.py  test_cv_time.py  test_export.py  test_report.py  test_split_balance_rows.py  test_split_gap_embargo.py  test_split_group.py  test_split_group_time.py  test_split_random.py  test_split_stratified_group.py  test_split_time.py
