[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "splitsmith"
version = "0.1.0"
description = "ML dataset splitting with built-in leakage detection"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Shikhar Shukla"},
]
keywords = ["machine-learning", "data-splitting", "leakage-detection", "cross-validation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.urls]
Homepage = "https://github.com/Amorfati123/splitsmith-v0.1"
Repository = "https://github.com/Amorfati123/splitsmith-v0.1"
Issues = "https://github.com/Amorfati123/splitsmith-v0.1/issues"
Documentation = "https://github.com/Amorfati123/splitsmith-v0.1#readme"

[tool.setuptools.packages.find]
include = ["splitsmith*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
